--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
          python -m pip install --upgrade pip
-         pip install 
+         pip install requests==2.23.0
          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Get Setting
       run: |
