--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,36 +9,35 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.6
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.6
-    - name: Install dependencies
-      run: |
-         python -m pip install --upgrade pip
-         pip install requests==2.23.0
-         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Get Setting
-      run: |
-        PUSHTYPE:${{secrets.PUSHTYPE}}
-        DINGTALKACCESSTOKEN:${{secrets.DINGTALKACCESSTOKEN}}
-        FTSERVERKEY:${{secrets.FTSERVERKEY}}
-        TELEGRAMTOKEN:${{secrets.TELEGRAMTOKEN}}
-        TELEGRAMCHADID:${{secrets.TELEGRAMCHADID}}
-        BARKTOKEN:${{secrets.BARKTOKEN}}
-        BARKSERVER:${{secrets.BARKSERVER}}
-        PLUSPUSH:${{secrets.PLUSPUSH}}
-        EWECHATPUSHTOKEN:${{secrets.EWECHATPUSHTOKEN}}
-        EWECHATAGENTID:${{secrets.EWECHATAGENTID}}
-        EWECHATAPPSECRETS:${{secrets.EWECHATAPPSECRETS}}
-        VCUSER:${{secrets.VCUSER}}
-        VCPASS:${{secrets.VCPASS}}
-        ZSERCIKIUSER:${{secrets.ZSERCIKIUSER}}
-        ZSECWIKIPASS:${{secrets.ZSECWIKIPASS}}
-        python3 0secSign.py
- 
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: 'Set Up Python'
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.6
+      - name: Install requirements
+        run: |
+          python3 -m pip install --upgrade pip
+          pip install requests==2.23.0
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Get Setting
+        env:
+          PUSHTYPE: ${{secrets.PUSHTYPE}}
+          DINGTALKACCESSTOKEN: ${{secrets.DINGTALKACCESSTOKEN}}
+          FTSERVERKEY: ${{secrets.FTSERVERKEY}}
+          TELEGRAMTOKEN: ${{secrets.TELEGRAMTOKEN}}
+          TELEGRAMCHADID: ${{secrets.TELEGRAMCHADID}}
+          BARKTOKEN: ${{secrets.BARKTOKEN}}
+          BARKSERVER: ${{secrets.BARKSERVER}}
+          PLUSPUSH: ${{secrets.PLUSPUSH}}
+          EWECHATPUSHTOKEN: ${{secrets.EWECHATPUSHTOKEN}}
+          EWECHATAGENTID: ${{secrets.EWECHATAGENTID}}
+          EWECHATAPPSECRETS: ${{secrets.EWECHATAPPSECRETS}}
+          VCUSER: ${{secrets.VCUSER}}
+          VCPASS: ${{secrets.VCPASS}}
+          ZSERCIKIUSER: ${{secrets.ZSERCIKIUSER}}
+          ZSECWIKIPASS: ${{secrets.ZSECWIKIPASS}} 
+        run: |
+          python3 0secSign.py
